<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvProfileTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="60dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/etUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:layout_marginTop="24dp"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/tvProfileTitle"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/accountPrivilege"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/permissions"
            android:layout_marginTop="12dp"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/etUsername"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/loginStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:layout_marginTop="12dp"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/accountPrivilege"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@id/loginStatus"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_max="320dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>