<?xml version="1.0" encoding="utf-8"?>
<!-- migrated linear layout to constraint to fix button stretching issue-->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvAddInventoryItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addInventoryItem"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/etItemName"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/itemName"
        android:autofillHints="off"
        android:inputType="text"
        android:textColorHint="#757575"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/tvAddInventoryItem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_max="320dp"
        />

    <EditText
        android:id="@+id/etItemQty"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/itemQty"
        android:autofillHints="off"
        android:inputType="number"
        android:textColorHint="#757575"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/etItemName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_max="320dp" />

    <EditText
        android:id="@+id/etReorderLevel"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/reorderNum"
        android:autofillHints="off"
        android:inputType="text"
        android:textColorHint="#757575"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/etItemQty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_max="320dp" />

    <Button
        android:id="@+id/btnAddItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btnAddInventoryItem"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="18dp"
        app:layout_constraintTop_toBottomOf="@id/etReorderLevel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_max="320dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>

