<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvEditInventoryItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editInventoryItem"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="60dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/etExistingItemName"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:hint="@string/itemNameExisting"
            android:autofillHints="off"
            android:inputType="text"
            android:textColorHint="#757575"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/tvEditInventoryItem"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_max="320dp"/>

        <EditText
            android:id="@+id/etNewItemName"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:hint="@string/changeItemNameTo"
            android:autofillHints="off"
            android:inputType="text"
            android:textColorHint="#757575"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/etExistingItemName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_max="320dp"/>

        <EditText
            android:id="@+id/etNewQuantity"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:hint="@string/changeQtyTo"
            android:autofillHints="off"
            android:inputType="number"
            android:textColorHint="#757575"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/etNewItemName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_max="320dp"/>

        <EditText
            android:id="@+id/etNewReorderLevel"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:hint="@string/changeReorderAmount"
            android:autofillHints="off"
            android:inputType="number"
            android:textColorHint="#757575"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintTop_toBottomOf="@id/etNewQuantity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_max="320dp"/>

        <Button
            android:id="@+id/btnSaveChanges"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/saveChanges"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="18dp"
            app:layout_constraintTop_toBottomOf="@id/etNewReorderLevel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_max="320dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>